--- a/games/manifest.json
+++ b/games/manifest.json
@@ -23,7 +23,7 @@
            "purpose": "any maskable"
     }
   ],
-  "name": "Template",
-  "short_name": "Template",
+  "name": "Luke",
+  "short_name": "Luke",
  "start_url": "index.html?standalone=true"           
 }
